fix page shifting problem

--- a/algorithm_pages/alg.css
+++ b/algorithm_pages/alg.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000000;
+    overflow-x: hidden;
     color: white;
     height: 800px;
     font-family: Roboto, sans-serif;
